plugins {
    id 'org.openjfx.javafxplugin' version '0.0.12'
    id 'org.beryx.jlink' version '2.24.4'
    id 'idea'
    id 'java-library'
    id 'application'
}

javafx {
    version = "18"
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.base']
}


group 'com.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.8.2'
}

sourceCompatibility = '17'
targetCompatibility = '17'


application {
    mainModule = 'com.example.cs195tennis'
    mainClass = 'com.example.cs195tennis.App'
}



dependencies {
    implementation group: 'com.opencsv', name: 'opencsv', version: '5.6'
    implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
    implementation 'com.jfoenix:jfoenix:9.0.10'
    implementation 'org.controlsfx:controlsfx:11.1.1'
    implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
    implementation'org.kordamp.ikonli:ikonli-javafx:12.3.1'
    implementation'org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0'
    implementation 'org.kordamp.ikonli:ikonli-materialdesign2-pack:12.3.1'
    implementation 'org.xerial:sqlite-jdbc'
    implementation 'org.apache.logging.log4j:log4j-api'
    implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
    implementation'org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0'
}

run {
    jvmArgs = ['-Djdk.gtk.version=2',
               "--add-exports=java.base/java.lang.reflect=com.jfoenix",
               "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
               "--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
               "--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix",
               "--add-exports=java.base/com.sun.javafx.binding=com.jfoenix",
               "--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix"
    ]
}
jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip") as RegularFile
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'cs195Tennis'
    }

}

jlinkZip {
    group = 'distribution'
}

test {
    useJUnitPlatform()
}
